--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "concurrently": "^5.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.6",
     "passport": "^0.4.1",
