--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,9 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
-    "http-proxy-middleware": "^1.0.3",
     "clsx": "^1.1.0",
+    "http-proxy-middleware": "^1.0.3",
+    "material-ui-popup-state": "^1.5.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
