--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
-    "react-table": "^7.0.4"
+    "react-table": "^7.0.4",
+    "styled-components": "^5.1.0"
   }
 }
